# File-Sharing-Application

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260323_000001_create_files_and_shares.py  20260323_000002_add_is_uploaded_to_files.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: file.py  share.py
app/schemas/: share.py
app/services/: security.py  storage.py
app/web/: demo.html
docs/: TESTING.md
scripts/: cleanup_db.py
tests/: conftest.py  test_cleanup_db.py  test_route_guards.py  test_security.py  test_storage_service.py  test_upload_size.py
tests/integration/: test_happy_path.py
